Add CI/release workflows, changelog, and polish repo
- Move banner to art/gh-og.png
- Add CI workflow (autoformat + test matrix on Node 20/22/24)
- Add release workflow (manual dispatch, npm publish with provenance)
- Add CHANGELOG.md following Keep a Changelog format
- Add parse-changelog.sh for automated release notes
- Add .gitattributes for consistent line endings
- Add keywords and homepage to package.json
- Move agent prompt higher in README with collapsible details
- Reorganize Claude Code skill section

--- a/package.json
+++ b/package.json
@@ -36,8 +36,21 @@
   "files": [
     "dist"
   ],
+  "keywords": [
+    "research",
+    "search",
+    "deep-research",
+    "multi-provider",
+    "perplexity",
+    "brave",
+    "exa",
+    "tavily",
+    "parallel",
+    "cli"
+  ],
   "license": "MIT",
   "author": "Joey Kudish",
+  "homepage": "https://github.com/jkudish/librarium",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jkudish/librarium.git"
