Add upgrade command, integration tests, error handling polish, and Windows CI
- New `upgrade` command with --check, --dry-run, and --force options
- Integration test suite (9 tests) against built CLI with dedicated vitest config
- Error handling helpers on BaseProvider: 401/403 hints, network error messages
- All 10 adapters updated to use formatError/formatCatchError helpers
- CI matrix expanded with Windows (node 20/22/24, unit tests only)
- Unit test count: 64, integration test count: 9

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,12 +46,26 @@ jobs:
     strategy:
       matrix:
         include:
+          # Linux — full suite
           - os: ubuntu-latest
             node-version: 20
+            run-integration: true
           - os: ubuntu-latest
             node-version: 22
+            run-integration: true
           - os: ubuntu-latest
             node-version: 24
+            run-integration: true
+          # Windows — unit tests only
+          - os: windows-latest
+            node-version: 20
+            run-integration: false
+          - os: windows-latest
+            node-version: 22
+            run-integration: false
+          - os: windows-latest
+            node-version: 24
+            run-integration: false
 
     steps:
       - name: Checkout
@@ -77,5 +91,9 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Test
+      - name: Unit tests
         run: npm run test
+
+      - name: Integration tests
+        if: matrix.run-integration
+        run: npm run test:integration
