--- a/package.json
+++ b/package.json
@@ -55,5 +55,11 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jkudish/librarium.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jkudish/librarium/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
