Fix release workflow: allow same version bump
npm version fails when package.json already has the target version.
Add --allow-same-version flag.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Bump version in package.json
-        run: npm version ${{ steps.version.outputs.number }} --no-git-tag-version
+        run: npm version ${{ steps.version.outputs.number }} --no-git-tag-version --allow-same-version
 
       - name: Update changelog
         run: .github/scripts/parse-changelog.sh release ${{ steps.version.outputs.number }}
