--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -269,6 +269,7 @@ jobs:
 
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin "https://x-access-token:${HOMEBREW_TAP_TOKEN}@github.com/jkudish/homebrew-tap.git"
           git add Formula/librarium.rb
           git commit -m "Update librarium to v${VERSION}" || echo "No changes to commit"
-          git push
+          git push origin main
