feat: add Perplexity Agent API presets and rename providers

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -63,10 +63,12 @@ body:
       label: Which providers are involved?
       multiple: true
       options:
-        - perplexity-deep
+        - perplexity-sonar-deep
+        - perplexity-deep-research
+        - perplexity-advanced-deep
         - openai-deep
         - gemini-deep
-        - perplexity-sonar
+        - perplexity-sonar-pro
         - brave-answers
         - exa
         - brave-search
