feat: add Perplexity Search API provider (raw results)

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -69,6 +69,7 @@ body:
         - openai-deep
         - gemini-deep
         - perplexity-sonar-pro
+        - perplexity-search
         - brave-answers
         - exa
         - brave-search
